[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/common/hex_cell.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="ArrayMesh" id=1]

[sub_resource type="MultiMesh" id=2]
transform_format = 1
instance_count = 1
mesh = SubResource( 1 )
transform_array = PoolVector3Array( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="hex_cell" type="MultiMeshInstance"]
material_override = SubResource( 3 )
multimesh = SubResource( 2 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 40, 0 )
visible = false

[node name="Area" type="Area" parent="."]
input_capture_on_drag = true

[node name="CollisionShape" type="CollisionShape" parent="Area"]
[connection signal="input_event" from="Area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
